--- a/topografiya/templates/leader/head_komeral/rejected_komeral_works.html
+++ b/topografiya/templates/leader/head_komeral/rejected_komeral_works.html
@@ -918,6 +918,10 @@
 
 
                     <div class="row p-2 mb-2">
+                        <div class="col-md-12 card p-1 shadow-lg">
+                            <i style="font-size: 20px"><sup class="text-danger">*</sup> Текширувга юборишдан олдин, ўзгаришларни <b>САҚЛАШ</b> тугмасини босишингизни сўраймиз!</i>
+                        </div>
+
                         <div class="col-md-6 card p-2 shadow-lg">
                             <button type="button" class="btn btn-warning btn-lg" id="save_files" worker="{{ user.profile.pk }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-check"></i> Сақлаш</button>
                         </div>
