--- a/topografiya/templates/leader/history/history_polevoy_checking.html
+++ b/topografiya/templates/leader/history/history_polevoy_checking.html
@@ -217,7 +217,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
                                 <li class="breadcrumb-item"><a href="{% url 'allworks' %}">Барча ишлар</a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'history_program_work' id=work.object.id %}">Ишчи дастур холати</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'history_polevoy_checking' id=work.object.id %}">Дала назорати </a></li>
                             </ol>
                         </div>
                         <div class="col-sm-6">
