--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -123,7 +123,7 @@
                                                                             <th scope="col">Иш тури</th>
                                                                             <th scope="col">Бажариш муддати</th>
 {#                                                                            <th scope="col">Холати</th>#}
-{#                                                                            <th scope="col">Танишиш</th>
+                                                                             <th scope="col">Танишиш</th>
                                                                         </tr>
                                                                         </thead>
                                                                         <tbody>
@@ -474,7 +474,7 @@
                                                                             <th scope="col">Иш тури</th>
                                                                             <th scope="col">Бажариш муддати</th>
 {#                                                                            <th scope="col">Холати</th>#}
-{#                                                                            <th scope="col">Tanishish</th>#}
+                                                                            <th scope="col">Tanishish</th>
                                                                         </tr>
                                                                         </thead>
                                                                         <tbody>
@@ -487,7 +487,7 @@
                                                                                     <td>{{ work.object.pdowork.work_term}} kun</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
-    {#                                                                                <td class="text-center"><a href="{% url 'show_pdowork' id=work.id %}" class="btn btn-success">Ko'rish</a></td>#}
+                                                                                    <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">Ko'rish</a></td>
                                                                           </tr>
 
 
@@ -544,8 +544,6 @@
             document.getElementsByClassName("one")[i].setAttribute("data-time", t);
             document.getElementsByClassName("count")[i].innerHTML=1;
         }
-
-
     </script>
 
 {#<script>#}
