--- a/topografiya/templates/leader/history/history_komeral_checking.html
+++ b/topografiya/templates/leader/history/history_komeral_checking.html
@@ -217,7 +217,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
                                 <li class="breadcrumb-item"><a href="{% url 'allworks' %}">Барча ишлар</a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'history_program_work' id=work.object.id %}">Ишчи дастур холати</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'history_komeral_checking' id=work.object.id %}">Комерал назорати</a></li>
                             </ol>
                         </div>
                         <div class="col-sm-6">
@@ -272,7 +272,7 @@
                                             {% endif %}
 
                                             {% if history.status == 17 %}
-                                                <div class="timeline left">
+                                                <div class="timeline right">
                                                 <div class="card">
                                                     <div class="card-body p-4" style="background-color: rgba(204, 255, 204, 0.8);">
                                                         <h5><i class="fa fa-calendar-times-o"></i> {{ history.active_time }}</h5>
