--- a/topografiya/templates/leader/komeral/rejected_komeral_works.html
+++ b/topografiya/templates/leader/komeral/rejected_komeral_works.html
@@ -963,7 +963,7 @@
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Оценка качества работ <sup class="text-danger">*</sup></label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="number"  id="a61" name="a61" value="{{ work.a61 }}"  placeholder="">
+                                                            <input class="form-control" type="text"  id="a61" name="a61" value="{{ work.a61 }}"  placeholder="">
                                                         </div>
                                                     </div>
                                                     <div class="mb-3 row">
