--- a/topografiya/templates/show.html
+++ b/topografiya/templates/show.html
@@ -487,7 +487,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
                                 <li class="breadcrumb-item"><a href="{% url 'history' %}">Архив</a></li>
-                                <li class="breadcrumb-item" ><a href="{% url 'open_to_print' id=workerobject.object.id %}">{{ workerobject.object.pdowork.object_name }}</a></li>
+                                <li class="breadcrumb-item" ><a href="{% url 'show_all_works' id=workerobject.object.id %}">{{ workerobject.object.pdowork.object_name }}</a></li>
                             </ol>
 
                         </div>
