--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -100,33 +100,36 @@
             <div class="nav-right col pull-right right-menu p-0">
                 <ul class="nav-menus" style="padding: 0px 20px;">
                     <li class="onhover-dropdown">
-                        <div class="notification-box"><i data-feather="bell"></i><span class="dot-animated"></span></div>
+                        <div class="notification-box"><i data-feather="bell"></i><span class="dot-animated"></span><sup> {{ count_works.new_messages }}</sup></div>
                         <ul class="notification-dropdown onhover-show-div">
                             <li>
-                                <p class="f-w-700 mb-0">Сизда 3 та билдиришнома бор<span
-                                        class="pull-right badge badge-primary badge-pill">3</span></p>
+                                <a href="{% url 'new_messages' %}">
+                                    <p class="f-w-700 mb-0">
+                                        Сизда <b class="text-danger">{{ count_works.new_messages }}</b> та билдиришнома бор
+                                    </p>
+                                </a>
                             </li>
-                            <li class="noti-primary">
-                                <div class="media"><span class="notification-bg bg-light-primary"><img src="{% static 'assets/images/user/user.png' %}" alt="user"></span>
-                                    <div class="media-body">
-                                        <p>Сардорбек Комилов</p><span>1 соат олдин</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="noti-secondary">
-                                <div class="media"><span class="notification-bg bg-light-secondary"><img src="{% static 'assets/images/user/user.png' %}" alt="user"></span>
-                                    <div class="media-body">
-                                        <p>Aнвар Бекматов</p><span>4 соат олдин</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="noti-danger">
-                                <div class="media"><span class="notification-bg bg-light-danger"><img src="{% static 'assets/images/user/user.png' %}" alt="user"></span>
-                                    <div class="media-body">
-                                        <p>Рустам Шодмонов</p><span>6 соат олдин</span>
-                                    </div>
-                                </div>
-                            </li>
+{#                           <li class="noti-primary">#}
+{#                                <div class="media"><span class="notification-bg bg-light-primary"><img src="{% static 'assets/images/user/user.png' %}" alt="user"></span>#}
+{#                                    <div class="media-body">#}
+{#                                        <p>Сардорбек Комилов</p><span>1 соат олдин</span>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </li>#}
+{#                            <li class="noti-secondary">#}
+{#                                <div class="media"><span class="notification-bg bg-light-secondary"><img src="{% static 'assets/images/user/user.png' %}" alt="user"></span>#}
+{#                                    <div class="media-body">#}
+{#                                        <p>Aнвар Бекматов</p><span>4 соат олдин</span>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </li> #}
+{#                            <li class="noti-danger">#}
+{#                                <div class="media"><span class="notification-bg bg-light-danger"><img src="{% static 'assets/images/user/user.png' %}" alt="user"></span>#}
+{#                                    <div class="media-body">#}
+{#                                        <p>Рустам Шодмонов</p><span>6 соат олдин</span>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </li>#}
                         </ul>
                     </li>
 
@@ -345,7 +348,17 @@
                             {% endif %}
                         {#                        bu oogd hisobot yozadigan#}
 
-{#                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>#}
+                            <li class="dropdown">
+                                <a class="nav-link menu-title link-nav" href="{% url 'new_messages' %}"><i data-feather="message-circle"></i>
+                                    <span>Хабарлар
+                                            {% if count_works.new_messages != 0 %}
+                                                <span style="float: right" class="badge rounded-pill badge-danger">
+                                                    {{ count_works.new_messages }}
+                                                </span>
+                                            {% endif %}
+                                    </span>
+                                </a>
+                            </li>
                             <li class="dropdown"><a class="nav-link menu-title link-nav" href="{% url 'history' %}"><i data-feather="arrow-down-circle"></i><span>Aрхив</span></a></li>
                             <li class="dropdown"><a class="nav-link menu-title link-nav" href="{% url 'settings' id=request.user.profile.pk %}"><i data-feather="settings"></i><span>Созламалар</span></a></li>
                             <li style="position: fixed;bottom: 10px;"><a  href="tel:+998711715658"><i data-feather="phone"></i> +998711715658</a></li>
